--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,11 @@ cmake_minimum_required(VERSION 3.1)
 project(webserver)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
-set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O0 -ggdb -std=c++11 -Wall -Wno-deprecated 
-    -Werror -Wno-unused-function -Wno-builtin-macro-redefined")
+set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O0 -ggdb -std=c++11 -Wall -Wno-deprecated -Werror -Wno-unused-function")
 
 include_directories(.)
-include_directories(/webserver/include)
-link_directories(/webserver/lib)
+include_directories(webserver/include)
+link_directories(webserver/lib)
 
 find_library(YAMLCPP yaml-cpp)
 message("***", ${YAMLCPP})
@@ -19,14 +18,12 @@ set(LIB_SRC
     src/basic/thread.cpp
     )
 
-add_library(webserver SHARED ${LIB_SRC})
-
-set (LIB_LIB
+set(LIB_LIB
     webserver
     pthread
-    ${YAMLCPP}
-    )
+    ${YAMLCPP})
 
+add_library(webserver SHARED ${LIB_SRC})
 
 add_executable(test_log tests/test_log.cpp)
 add_dependencies(test_log webserver)
@@ -39,6 +36,7 @@ target_link_libraries(test_config webserver ${LIB_LIB})
 add_executable(test_thread tests/test_thread.cpp)
 add_dependencies(test_thread webserver)
 target_link_libraries(test_thread webserver ${LIB_LIB})
+
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
