--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,11 @@ link_directories(/apps/webserver/lib)
 set(LIB_SRC
 
     src/http/http.cpp
-    # src/http/http_connection.cpp
+    src/http/http_connection.cpp
     src/http/http_parser.cpp
-    # src/http/http_session.cpp
-    # src/http/http_server.cpp
-    # src/http/servlet.cpp
+    src/http/http_session.cpp
+    src/http/http_server.cpp
+    src/http/servlet.cpp
     src/basic/address.cpp
     src/basic/bytearray.cpp
     src/basic/config.cpp
@@ -42,6 +42,7 @@ set(LIB_SRC
 
 ragelmaker(src/http/http11_parser.rl LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/http)
 ragelmaker(src/http/httpclient_parser.rl LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/http)
+ragelmaker(src/basic/uri.rl LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/basic)
 
 add_library(webserver SHARED ${LIB_SRC})
 force_redefine_file_macro_for_sources(webserver) #__FILE__
@@ -74,9 +75,9 @@ webserver_add_executable(test_bytearray "tests/test_bytearray.cpp" webserver "${
 webserver_add_executable(test_http "tests/test_http.cpp" webserver "${LIBS}")
 webserver_add_executable(test_http_parser "tests/test_http_parser.cpp" webserver "${LIBS}")
 webserver_add_executable(test_tcp_server "tests/test_tcp_server.cpp" webserver "${LIBS}")
-# webserver_add_executable(echo_server "examples/echo_server.cpp" webserver "${LIBS}")
-# webserver_add_executable(test_http_server "tests/test_http_server.cpp" webserver "${LIBS}")
-# webserver_add_executable(test_http_connection "tests/test_http_connection.cpp" webserver "${LIBS}")
-
+webserver_add_executable(echo_server "src/examples/echo_server.cpp" webserver "${LIBS}")
+webserver_add_executable(test_http_server "tests/test_http_server.cpp" webserver "${LIBS}")
+webserver_add_executable(test_http_connection "tests/test_http_connection.cpp" webserver "${LIBS}")
+webserver_add_executable(test_uri "tests/test_uri.cpp" webserver "${LIBS}")
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
