--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,5 +79,9 @@ webserver_add_executable(echo_server "src/examples/echo_server.cpp" webserver "$
 webserver_add_executable(test_http_server "tests/test_http_server.cpp" webserver "${LIBS}")
 webserver_add_executable(test_http_connection "tests/test_http_connection.cpp" webserver "${LIBS}")
 webserver_add_executable(test_uri "tests/test_uri.cpp" webserver "${LIBS}")
+webserver_add_executable(my_http_server "samples/my_http_server.cpp" webserver "${LIBS}")
+webserver_add_executable(echo_udp_client "samples/echo_udp_client.cpp" webserver "${LIBS}")
+webserver_add_executable(echo_server_upd "samples/echo_server_udp.cpp" webserver "${LIBS}")
+
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
