--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,20 +5,37 @@ project(webserver)
 include (cmake/utils.cmake)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
-set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O0 -ggdb -std=c++11 -Wall -Wno-deprecated -Werror -Wno-unused-function -Wno-builtin-macro-redefined")
+set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O0 -ggdb -std=c++11 -Wall -Wno-deprecated -Werror -Wno-unused-function -Wno-builtin-macro-redefined -Wno-deprecated-declarations")
 
 include_directories(.)
 include_directories(/apps/webserver/include)
 link_directories(/apps/webserver/lib)
 
-set(LIB_SRC
+find_package(Boost REQUIRED)
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+endif()
 
+find_package(OpenSSL REQUIRED)
+if(OPENSSL_FOUND)
+    include_directories(${OPENSSL_INCLUDE_DIR})
+endif()
+
+
+
+
+set(LIB_SRC
     src/http/http.cpp
     src/http/http_connection.cpp
     src/http/http_parser.cpp
     src/http/http_session.cpp
     src/http/http_server.cpp
     src/http/servlet.cpp
+    src/http/ws_connection.cpp
+    src/http/ws_server.cpp
+    src/http/ws_servlet.cpp
+    src/http/ws_session.cpp
+    src/basic/daemon.cpp
     src/basic/address.cpp
     src/basic/bytearray.cpp
     src/basic/config.cpp
@@ -38,6 +55,7 @@ set(LIB_SRC
     src/basic/env.cpp
     src/basic/scheduler.cpp
     src/basic/mutex.cpp
+    src/util/hash_util.cpp
     )
 
 ragelmaker(src/http/http11_parser.rl LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/http)
@@ -45,23 +63,22 @@ ragelmaker(src/http/httpclient_parser.rl LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src
 ragelmaker(src/basic/uri.rl LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/basic)
 
 add_library(webserver SHARED ${LIB_SRC})
-force_redefine_file_macro_for_sources(webserver) #__FILE__
-#add_library(webserver_static STATIC ${LIB_SRC})
-#SET_TARGET_PROPERTIES (webserver_static PROPERTIES OUTPUT_NAME "webserver")
+force_redefine_file_macro_for_sources(webserver)
 
 find_library(YAMLCPP yaml-cpp)
 find_library(PTHREAD pthread)
-#set(LIBS ${LIBS} webserver)
-#set(LIBS ${LIBS} dl)
-#set(LIBS ${LIBS} ${YAMLCPP})
-#set(LIBS ${LIBS} ${PTHREAD})
+
 
 set(LIBS
         webserver
+        dl
         pthread
-        yaml-cpp)
+        yaml-cpp
+        ${OPENSSL_LIBRARIES})
 
-# webserver_add_executable(test1 "tests/test.cpp" webserver "${LIBS}")
+#${PROTOBUF_LIBRARIES})
+
+webserver_add_executable(test_log "tests/test_log.cpp" webserver "${LIBS}")
 webserver_add_executable(test_config "tests/test_config.cpp" webserver "${LIBS}")
 webserver_add_executable(test_thread "tests/test_thread.cpp" webserver "${LIBS}")
 webserver_add_executable(test_util "tests/test_util.cpp" webserver "${LIBS}")
@@ -82,6 +99,11 @@ webserver_add_executable(test_uri "tests/test_uri.cpp" webserver "${LIBS}")
 webserver_add_executable(my_http_server "samples/my_http_server.cpp" webserver "${LIBS}")
 webserver_add_executable(echo_udp_client "samples/echo_udp_client.cpp" webserver "${LIBS}")
 webserver_add_executable(echo_server_upd "samples/echo_server_udp.cpp" webserver "${LIBS}")
+
+webserver_add_executable(test_daemon "tests/test_daemon.cpp" webserver "${LIBS}")
+webserver_add_executable(test_env "tests/test_env.cpp" webserver "${LIBS}")
+webserver_add_executable(test_ws_client "tests/test_ws_client.cpp" webserver "${LIBS}")
+webserver_add_executable(test_ws_server "tests/test_ws_server.cpp" webserver "${LIBS}")
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
