--- a/bin/conf/server.yml
+++ b/bin/conf/server.yml
@@ -1,16 +1,9 @@
-servers:
-    - address: ["0.0.0.0:8090", "127.0.0.1:0", "/tmp/test.sock"]
+http_servers:
+    - address: ["0.0.0.0:8080", "127.0.0.1:8081"]
       keepalive: 1
       timeout: 1000
       name: webserver/1.1
-      accept_worker: accept
-      io_worker: io
-      process_worker:  io
-      type: http
-    - address: ["0.0.0.0:8062", "0.0.0.0:8061"]
+    - address: ["0.0.0.0:8070", "enp0s3:8071"]
+      keepalive: 1
       timeout: 1000
-      name: webserver-rock/1.0
-      accept_worker: accept
-      io_worker: io
-      process_worker:  io
-      type: rock
+      name: webserver/2.1
