--- a/bin/conf/log.yml
+++ b/bin/conf/log.yml
@@ -6,7 +6,7 @@ logs:
             file: /apps/logs/webserver/root.log
           - type: StdoutLogAppender
     - name: system
-      level: debug
+      level: info
       appenders:
           - type: FileLogAppender
             file: /apps/logs/webserver/system.log
