--- a/bin/conf/server.yml
+++ b/bin/conf/server.yml
@@ -1,13 +1,21 @@
-http_servers:
+servers:
     - address: ["0.0.0.0:8090", "127.0.0.1:8091", "/tmp/test.sock"]
       keepalive: 1
       timeout: 1000
       name: webserver/1.1
       accept_worker: accept
       process_worker:  io
+      type: http
     - address: ["0.0.0.0:8072", "localhost:8071"]
       keepalive: 1
       timeout: 1000
       name: webserver/2.1
       accept_worker: accept
       process_worker:  io
+      type: ws
+    - address: ["0.0.0.0:8062", "localhost:8061"]
+      timeout: 1000
+      name: webserver-rock/1.0
+      accept_worker: accept
+      process_worker:  io
+      type: rock
