--- a/template/bin/conf/log.yml
+++ b/template/bin/conf/log.yml
@@ -3,11 +3,11 @@ logs:
       level: info
       appenders:
           - type: FileLogAppender
-            file: /apps/logs/sylar/root.txt
+            file: /apps/logs/webserver/root.txt
           - type: StdoutLogAppender
     - name: system
       level: info
       appenders:
           - type: FileLogAppender
-            file: /apps/logs/sylar/system.txt
+            file: /apps/logs/webserver/system.txt
           - type: StdoutLogAppender
