--- a/template/bin/conf/system.yml
+++ b/template/bin/conf/system.yml
@@ -1,3 +1,3 @@
 server:
-    work_path: /apps/work/webserver
-    pid_file: webserver.pid
+    work_path: /apps/work/project_name
+    pid_file: project_name.pid
